--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-#root {
+.shipmentBlock {
+  display: flex;
+  justify-content: center;
+  padding: 20px 23px 52px;
+  background-color: #DDDEE4;
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +46,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
